Bug 78027 - FILEOPEN: Importing of Excel files with non-uniform formated diagram title
Summary: FILEOPEN: Importing of Excel files with non-uniform formated diagram title
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.8.0 inReleaseNotes:24.8
Keywords:
Depends on: 78025
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2014-04-28 09:00 UTC by Jan
Modified: 2025-05-23 14:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
File to import with non-uniform diagram title (11.02 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-04-28 09:00 UTC, Jan
Details
graph in Excel 2010 (8.18 KB, image/png)
2014-04-28 12:13 UTC, Jan
Details
Broken graph in Libreoffice (16.47 KB, image/png)
2014-04-28 12:14 UTC, Jan
Details
File compared MSO OO LO64+ (93.29 KB, image/jpeg)
2019-09-20 06:45 UTC, Timur
Details
tdf#78027 Excel 365 vs LO 24.2 chart text formatting (90.23 KB, image/png)
2024-02-07 16:04 UTC, Piotr Osada
Details
tdf#78027 bug.xlsx (14.37 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-02-07 16:04 UTC, Piotr Osada
Details
Proper behavior (191.50 KB, image/png)
2024-04-04 08:39 UTC, Piotr Osada
Details
Super-sub-script overlaping.png (193.13 KB, image/png)
2024-05-22 14:23 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2014-04-28 09:00:05 UTC
Problem description:
I import an excel file with an embedded diagram. The title of the chart/diagram has one word formatted in bold. However, in Libreoffice the formatting of the title is gone. Everything is formatted like the first word in the title.

Steps to reproduce:
1. Import attached document
2. Check if the title of diagram is properly formated:
 - "bold_word" should be bold with 18pt font 
 - "italic_word" should be italic with 18pt font
 - "normal_word" should be normal with 18pt font
 - "new_line_with_small_word" should be normal with 11 pt font in next line

Current behavior:
All words are bold with 18pt font in the diagram title

Expected behavior:
Words are formatted like in excel:
 - "bold_word" should be bold with 18pt font 
 - "italic_word" should be italic with 18pt font
 - "normal_word" should be normal with 18pt font
 - "new_line_with_small_word" should be normal with 11 pt font in next line
Comment 1 Jan 2014-04-28 09:00:51 UTC
Created attachment 98115 [details]
File to import with non-uniform diagram title
Comment 2 Jan 2014-04-28 12:13:02 UTC Comment hidden (obsolete)
Comment 3 Jan 2014-04-28 12:14:33 UTC Comment hidden (obsolete)
Comment 4 Jan 2014-04-28 12:15:16 UTC Comment hidden (obsolete)
Comment 5 Jan 2014-04-29 08:33:45 UTC Comment hidden (obsolete)
Comment 6 Jacques Guilleron 2014-04-29 14:46:48 UTC
Hi Jan,

As said previously in bug 78025, this will be solved when we'll have richer formating in LO. Confirm this behaviour for Windows 7 Home Premium.

I put Status to NEW.

Have a nice day,

Jacques
Comment 7 QA Administrators 2015-06-08 14:43:14 UTC Comment hidden (obsolete)
Comment 8 Jan 2015-06-08 15:24:02 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2016-09-20 10:02:13 UTC Comment hidden (obsolete)
Comment 10 vihsa 2017-05-31 13:29:58 UTC
only numbers are visible, embedded diagram is not visible on lo viewer.
version: 5.5.0.0.alpha0+ / build id : ec79f34 / android 5.1
Comment 11 QA Administrators 2018-06-01 02:16:01 UTC Comment hidden (obsolete)
Comment 12 Jan 2018-06-01 11:23:21 UTC
The bug still exists in LO 6.0:

Version: 6.0.4.2
Build ID: 1:6.0.4~rc2-0ubuntu0.16.04.1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: de-DE (de_DE.UTF-8); Calc: group
Comment 13 Timur 2019-09-20 06:45:23 UTC
Created attachment 154309 [details]
File compared MSO OO LO64+

Repro 6.4+. 
Another example attachment 102146 [details] from bug 80816 and bug 127589.
Comment 14 QA Administrators 2022-01-30 03:46:05 UTC Comment hidden (obsolete)
Comment 15 QA Administrators 2024-01-31 03:13:49 UTC Comment hidden (obsolete)
Comment 16 Piotr Osada 2024-02-07 16:04:14 UTC
Created attachment 192451 [details]
tdf#78027 Excel 365 vs LO 24.2 chart text formatting

(In reply to QA Administrators from comment #15)
> If the bug is present, please leave a comment that includes the information
> from Help - About LibreOffice.
> 
> Warm Regards,
> QA Team

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Windows 10.0 Build 22000; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded

Yes, this behaviour is still buggy. It looks like there is a lack of Rich Text support as it is for example in Origin Lab:

1) sub, super-scripts in cells
https://www.originlab.com/doc/en/Origin-Help/FormatCells-Dialog

2) sub, super-scripts in charts
https://www.originlab.com/doc/Quick-Help/insert-symbols-in-legend

3) general about rich text
https://www.originlab.com/doc/en/Origin-Help/Origin-Rich-Text
https://blog.originlab.com/notes-window-with-rich-text-and-style

With this links I'm not intend to implement something like this, but giving this just like good examples, how it works.
Comment 17 Piotr Osada 2024-02-07 16:04:58 UTC
Created attachment 192452 [details]
tdf#78027 bug.xlsx
Comment 18 Commit Notification 2024-04-02 21:27:13 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f31a8ff9ea15ad81aeac265fce6eafe6342a68b7

tdf#78027 - Fix Chart OOXML Import with non-uniform formatted titles

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Piotr Osada 2024-04-04 08:39:14 UTC
Created attachment 193484 [details]
Proper behavior

Confirm, it works now.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b9905df455b47977968a185a7c43f35541e018b
CPU threads: 8; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded


Image showing expected behavior after the commit:
 f31a8ff9ea15ad81aeac265fce6eafe6342a68b7
Comment 20 Piotr Osada 2024-04-04 09:02:34 UTC
Is this planned to be included in 24.2?
Comment 21 Piotr Osada 2024-04-04 09:02:58 UTC
Or even 7.6?
Comment 22 Piotr Osada 2024-05-22 14:23:44 UTC
Created attachment 194277 [details]
Super-sub-script overlaping.png

Happily, all the formatting (normal, underline, bold, italic, subscript, superscript, font size) are preserved. 
But it looks like there is still bug with superscript and subscript overlapping in:

Version: 24.8.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: a17e39caaf73108bee692d6f64a44c62f4066f1d
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded
Comment 23 Piotr Osada 2024-05-22 14:27:29 UTC
Comment on attachment 194277 [details]
Super-sub-script overlaping.png

Overlapping