tdf#78027 - Fix Chart OOXML Import with non-uniform formatted titles

Character formats are disappeared from Chart Title textobjects if they were
formatted non-uniform. In this patch only the OOXML import and the chartview
part will be fixed which make it visible after the import.

(Note: next patch will contain the chart controller part where the characters
can be formatted during title editing).

cherry-picked from commit: f31a8ff9ea15ad81aeac265fce6eafe6342a68b7

Change-Id: I4fb5c3d80b7889935d198e70fb49e2c68108b235
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165500
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>